--- a/.automation.yml
+++ b/.automation.yml
@@ -1,6 +1,9 @@
 ---
 distros:
     - el8stream
+    - el9stream:
+        runtime-requirements:
+          host_distro: newer
 release_branches:
   master:
     - ovirt-master
